# svd-watermarking

./: .gitignore  main.py  pyproject.toml
static/: app.css  app.js  index.html
