[project]
name = "svd-watermarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "torch>=2.12.0",
    "uvicorn[standard]>=0.49.0",
]
